@@ -647,6 +647,7 @@ wxMSW:
 - Fix changing labels of menu items with bitmaps (Daniel Hyams).
 - Fix appearance of multiline coloured wxCheckBox (Catalin Raceanu).
 - Allow creating wxCursor from ANI files (Catalin Raceanu).
+- Add wxIcon::CreateFromHICON() (troelsk).
 
 wxOSX/Cocoa:
 
